# scht-lab

./: LICENSE  README.md  full-topo.json  network.py  openapi.yaml  pyproject.toml  requirements.txt  tree-topo.json
mininet/: full-topo.json  network.py  tree-topo.json
scht_lab/: __init__.py  __main__.py  app.py  client.py  cost_calc.py  create_flow.py  flows.py  main.py  topo.py  topo_graph.py
scht_lab/cli/: app.py  file_manager.py  flows.py  paths.py  streams.py  topo.py
scht_lab/helpers/: gather_dict.py  jsonl.py  location_serializer.py
scht_lab/models/: flow.py  stream.py  topo.py
z1/: activate-flows.bat  iperf1.csv  iperf2.csv  iperf3.csv  iperfudp2.csv  iperfudp3.csv  iperfudp4.csv  iperfudp5.csv  z1.json  z2.json
z2/: iperfudpparallel1.csv  iperfudpparallel2.csv  iperfudpparallel3.csv  iperfudpparallel4.csv  streams-schema.json  tcp1.json  test.json  test2.json  udp1.json  udp2.json  udp3.json
