[tool.poetry]
name = "scht-lab"
version = "0.1.0"
description = ""
authors = ["Opliko <opliko.reg@protonmail.com>"]
readme = "README.md"
packages = [{include = "scht_lab"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"
typer = {extras = ["all"], git = "https://github.com/oplik0/typer.git", branch = "async_command"}
rustworkx = "^0.13.2"
geopy = "^2.4.0"
async-lru = "^2.0.4"
anyio = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
