[tool.poetry]
name = "scht-lab"
version = "0.1.0"
description = ""
authors = ["Opliko <opliko.reg@protonmail.com>"]
readme = "README.md"
packages = [{include = "scht_lab"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"
typer = {extras = ["all"], git = "https://github.com/oplik0/typer.git", branch = "async_command"}
rustworkx = "^0.13.2"
geopy = "^2.4.0"
async-lru = "^2.0.4"
anyio = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["D", "E", "F", "I", "UP", "S", "B", "A", "COM", "ICN", "PL", "RUF", "YTT", "BLE", "C4", "DTZ", "EM", "EXE", "ISC", "RSE", "TCH", "PTH", "TRY", "NPY"]
ignore = ["W191", "D206", "D211", "D213", "PLR0913", "E731", "A003", "UP007"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
	"tests",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.yapf]
USE_TABS = true
COLUMN_LIMIT = 100
CONTINUATION_ALIGN_STYLE = "VALIGN-RIGHT"